recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:2: error: illegal start of simple pattern
var int i=0
         ^FourSquare:3: error: '=' expected but ';' found.
def carre(){
^